--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Header starts here. It contains Logo and 3 navigation links. 
     ****************************************************************************-->
     <div id="logo"> <img src="BlogPostAssets/images/制版工作室.png" alt="宁波服装制版在线" width="143" height="45"><!-- Company Logo text -->   </div>
-    <nav> <a href="#" title="Link">首页</a> <a href="#" title="Link">联系我们</a><a href="#" title="Link"></a> </nav>
+    <nav> <a href="index.html" title="Link">首页</a> <a href="indexb.html" title="Link">联系我们</a><a href="#" title="Link"></a> </nav>
   </header>
   <div id="content">
     <div class="notOnDesktop"> 
