--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Header starts here. It contains Logo and 3 navigation links. 
     ****************************************************************************-->
     <div id="logo"> <img src="BlogPostAssets/images/制版工作室.png" alt="宁波服装制版在线" width="143" height="45"><!-- Company Logo text -->   </div>
-    <nav> <a href="index.html" title="Link">首页</a> <a href="#" title="Link">联系我们</a><a href="#" title="Link"></a> </nav>
+    <nav> <a href="index.html" title="Link">首页</a> <a href="indexb.html" title="Link">联系我们</a><a href="#" title="Link"></a> </nav>
   </header>
   <div id="content">
     <div class="notOnDesktop"> 
@@ -56,12 +56,12 @@
       <!--************************************************************************
     Sidebar starts here. It contains a searchbox, sample ad image and 6 links
     ****************************************************************************-->
-      <input type="text" placeholder="Search">
+      
       <div id="adimage"><img src="BlogPostAssets/images/300x250.gif" alt=""/></div>
       <nav>
         <ul>
-          <li><a href="BlogPostAssets/images/gog.svg" title="Link">论坛网站</a></li>
-          <li><a href="#" title="Link">服装3D</a></li>
+          <li><a href="https://coooc.link/" title="Link">服装导航</a></li>
+          <li><a href="https://www.annazi.cn:10072/" title="Link">服装3D</a></li>
           <!--<li><a href="#" title="Link">3D技术在服装行业的应用</a></li>
           <li><a href="#" title="Link">Link4</a></li>
           <li><a href="#" title="Link">Link5</a></li>
@@ -88,7 +88,7 @@
       </article>
     </footer>
   </div>
-  <div id="footerbar"><!-- Small footerbar at the bottom --></div>
+  <div id="footerbar">&nbsp;</a></div>
 </div>
 </body>
 </html>
