--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     Sidebar starts here. It contains a searchbox, sample ad image and 6 links
     ****************************************************************************-->
       
-      <div id="adimage"><img src="BlogPostAssets/images/300x250.gif" alt=""/></div>
+      <div id="adimage"><a href="https://www.annazi.cn:10072/"><img src="BlogPostAssets/images/300x250.gif" alt=""/></a></div>
       <nav>
         <ul>
           <li><a href="https://coooc.link/" title="Link">服装导航</a></li>
