--- a/ind02.html
+++ b/ind02.html
@@ -30,16 +30,12 @@
     <div class="vogana01">
 </div>
     <div class="vogana02">
-        <h1>服装制版</h1>
-        服装制版是指在服装设计开发过程中，将设计图纸转化为真实服装尺寸的过程。制版包括对版型、面料、配饰等进行细致的测量和调整，并绘制出服装的图纸。
-<br>
-制版流程通常包括以下几个步骤：<br>
-
-根据设计图纸和面料要求，测量并调整版型尺寸。<br>
-绘制出服装的图纸，包括前身、后身、侧身、领口、袖口等部位。<br>
-根据图纸，制作出服装样衣。<br>
-根据样衣进行修改和调整，直至符合要求。<br>
-服装制版需要经过细致的测量和调整，需要有丰富的经验和技巧，一般由专业的制版师进行。<br>
+        <h1>联系我们</h1>
+		<br>
+		QQ:184404154
+        <br>
+		地址：宁波市
+		<br>
     </div>
 	  
 <!-- 内容样式 */ -->		  
