--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+	
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<button id="backToTopBtn">∧</button>
     <div class="header">
         <div class="navbar">
             <div class="logo">
@@ -35,11 +37,48 @@
 <br>
 制版流程通常包括以下几个步骤：<br>
 
-根据设计图纸和面料要求，测量并调整版型尺寸。<br>
-绘制出服装的图纸，包括前身、后身、侧身、领口、袖口等部位。<br>
-根据图纸，制作出服装样衣。<br>
-根据样衣进行修改和调整，直至符合要求。<br>
-服装制版需要经过细致的测量和调整，需要有丰富的经验和技巧，一般由专业的制版师进行。<br>
+<ol>根据设计图纸和面料要求，测量并调整版型尺寸。</ol>
+<ol>绘制出服装的图纸，包括前身、后身、侧身、领口、袖口等部位。</ol>
+<ol>根据图纸，制作出服装样衣。</ol>
+<ol>根据样衣进行修改和调整，直至符合要求。</ol>
+<ol>服装制版需要经过细致的测量和调整，需要有丰富的经验和技巧，一般由专业的制版师进行。</ol>
+		<br>
+		<h1>样衣制作是服装设计和生产过程中的重要环节，它是将设计师的概念转化为实际服装原型的步骤。样衣是设计师和团队审查、修改和完善服装设计的基础。</h1>
+		以下是样衣制作的一般步骤：
+		<br>
+		<ol>1. 制版： 首先，制版师根据设计师提供的草图、图纸或数字设计，创建服装的基本图样。这些图样描述了服装的各个部分，包括前后身、袖子、领口等。</ol>
+
+<ol>2. 选择面料： 根据设计要求和服装用途，纺织工程师或面料专家选择适合的面料。面料的质地、颜色、透气性等特性都会影响最终样衣的效果。</ol>
+
+<ol>3. 剪裁面料： 根据制版师提供的图样，将选定的面料剪裁成所需的形状和尺寸。</ol>
+
+<ol>4. 缝制和组装： 样衣制作师使用缝纫机和其他制衣工具，将剪裁好的面料缝制成服装的零件，然后组装起来。这个过程可能包括缝接、拼接、装饰等步骤。
+</ol>
+<ol>5. 试穿和调整： 制作好的样衣由模特进行试穿。设计师和制版师会仔细观察样衣的剪裁、贴合度、舒适性等方面，然后对需要进行调整的地方提出建议。
+</ol>
+<ol>6. 修改和完善： 基于试穿的结果，样衣可能需要进行一些修改和调整。制版师会根据设计师和团队的反馈，进行图样的修正，以确保样衣更加符合设计要求。</ol>
+
+<ol>7. 再次试穿和确认： 经过修改后的样衣再次由模特试穿，确保修正的效果符合预期。</ol>
+
+<ol>8. 制作最终样品： 一旦样衣达到满意的水平，最终的样品可以用于展示给客户、拍摄宣传照片，或者作为生产的参考样本。</ol>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br><br><br>
+		<br>
+		<br>
+		样衣制作的过程需要密切合作的团队协同努力，以确保服装的设计和质量得到最佳体现。这个阶段也为设计师和生产团队提供了机会，进一步优化服装的细节和整体效果。
     </div>
 	  
 <!-- 内容样式 */ -->		  
