--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		
 <!-- 底部样式 -->		  
     <div class="footer">
-        &copy; 2023 响应式静态网页。版权所有。
+        &copy; 2023 QQ:184405145 版权所有。
     </div>
 </body>
 </html>
