--- a/ind02.html
+++ b/ind02.html
@@ -31,11 +31,11 @@
 </div>
     <div class="vogana02">
         <h1>联系我们</h1>
-		<br>
-		QQ:184404154
-        <br>
-		地址：宁波市
-		<br>
+	  <p> <br>
+		  QQ:184404154&nbsp;</p>
+		<p>邮箱：cctv92@126.com&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>
+		  地址：上海&nbsp; &nbsp; <br>
+	  </p>
     </div>
 	  
 <!-- 内容样式 */ -->		  
