--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </div>
     <div class="vogana02">
         <h1>服装制版</h1>
+		<br>
         服装制版是指在服装设计开发过程中，将设计图纸转化为真实服装尺寸的过程。制版包括对版型、面料、配饰等进行细致的测量和调整，并绘制出服装的图纸。
 <br>
 制版流程通常包括以下几个步骤：<br>
@@ -46,7 +47,9 @@
 <ol>根据样衣进行修改和调整，直至符合要求。</ol>
 <ol>服装制版需要经过细致的测量和调整，需要有丰富的经验和技巧，一般由专业的制版师进行。</ol>
 		<br>
-		<h1>样衣制作是服装设计和生产过程中的重要环节，它是将设计师的概念转化为实际服装原型的步骤。样衣是设计师和团队审查、修改和完善服装设计的基础。</h1>
+		<h1>样衣制作</h1>
+		<br>
+		样衣制作是服装设计和生产过程中的重要环节，它是将设计师的概念转化为实际服装原型的步骤。样衣是设计师和团队审查、修改和完善服装设计的基础。
 		以下是样衣制作的一般步骤：
 		<br>
 		<ol>1. 制版： 首先，制版师根据设计师提供的草图、图纸或数字设计，创建服装的基本图样。这些图样描述了服装的各个部分，包括前后身、袖子、领口等。</ol>
@@ -70,72 +73,7 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><br><br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br><br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		更新
+		
     </div>
 	  
 <!-- 内容样式 */ -->		  
