--- a/ind02.html
+++ b/ind02.html
@@ -33,9 +33,14 @@
         <h1>联系我们</h1>
 	  <p> <br>
 		  QQ:184404154&nbsp;</p>
-		<p>邮箱：cctv92@126.com&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>
-		  地址：上海&nbsp; &nbsp; <br>
-	  </p>
+      
+        <p>邮箱：cctv92@126.com&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>
+          地址：上海&nbsp; &nbsp; </p><br>
+          扫码加微信
+          <br> 
+		<div style="">
+          <img src="images/weixin.jpg" width="300" height="300" alt=""/>
+      </div>
     </div>
 	  
 <!-- 内容样式 */ -->		  
