--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
     <title>服装制版</title>
-    <meta name="keywords" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师,www.coooc.link">
-    <meta name="description" content="收集国内外优秀服装制版网站、裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师,www.coooc.link">
+    <meta name="keywords" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师,annazi.netlify.app">
+    <meta name="description" content="收集国内外优秀服装制版网站、裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师,annazi.netlify.app">
 
 <meta property="og:type" content="article">
-    <meta property="og:url" content="https://coooc.link/">
-    <meta property="og:title" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。www.coooc.link">
-    <meta property="og:description" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。www.coooc.link">
-    <meta property="og:image" content="https://coooc.link/assets/images/webstack_banner_cn.png">
-    <meta property="og:site_name" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。www.coooc.link">
+    <meta property="og:url" content="https://annazi.netlify.app/images/favicon.png">
+    <meta property="og:title" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。annazi.netlify.app">
+    <meta property="og:description" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。annazi.netlify.app">
+    <meta property="og:image" content="https://annazi.netlify.app/images/favicon.png">
+    <meta property="og:site_name" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。annazi.netlify.app">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。www.coooc.link">
-    <meta name="twitter:description" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。www.coooc.link">
-    <meta name="twitter:image" content="https://coooc.link/assets/images/webstack_banner_cn.png">
+    <meta name="twitter:title" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。annazi.netlify.app">
+    <meta name="twitter:description" content="裤子制版,西装制版,大衣制版,风衣制版,服装技术,cad制版,服装3d,服装技术,服装打样,样衣打样,服装工艺,优秀服装版师,服装设计师,服装网址大全,服装导航,服装产品,服装交互设计师。annazi.netlify.app">
+    <meta name="twitter:image" content="https://annazi.netlify.app/images/favicon.png">
 	
     <link rel="stylesheet" href="css/styles.css">
 </head>
