--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- ... 其他 meta 标签和样式链接 ... -->
     <link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="description" content="服装制版">
-<meta name="keywords" content="女装制版, 男装制版, 制版">
+<meta name="keywords" content="女装制版, 男装制版, 制版, annazi.netlify.app">
 </head>
 <body>
     
