--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="description" content="服装制版">
 <meta name="keywords" content="女装制版, 男装制版, 制版, annazi.netlify.app">
+	<meta http-equiv="refresh" content="5;url=/404.html">
 </head>
 <body>
     
