--- a/404.html
+++ b/404.html
@@ -2,15 +2,48 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>页面不存在 | 服装制版</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="header">
+        <div class="navbar">
+            <div class="logo">
+                <img src="images/favicon.png" alt="Logo">
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">首页</a></li>
+                <li><a href="#">关于</a></li>
+                <li><a href="ind03.html">服务</a></li>
+                <li><a href="ind02.html">联系我们</a></li>
+            </ul>
+        </div>
+    </div>
+    
+	<!-- 内容样式 */ -->
+<div class="content">
+		
+	<!-- 内容样式 */ -->	
+	
+    <div class="vogana01">
+</div>
     <div class="vogana02">
             <h1>404</h1>
             <p>Oops! It looks like you're lost...</p>
             <p>The Page you're looking for doesn't exist or another error occurred.</p>
-            <p><a href="index.html">👉  https://coooc.link</a></p>
+            <p><a href="index.html">👉  https://annazi.netlify.app</a></p>
         </div>
+	  
+<!-- 内容样式 */ -->		  
+  </div>	
+<!-- 内容样式 */ -->
+<button id="backToTopBtn">∧</button>
+	<script src="script.js"></script>		
+<!-- 底部样式 -->		  
+    <div class="footer">
+        &copy; 2023 QQ:184405145 版权所有。
+    </div>
 </body>
 </html>
