--- a/404.html
+++ b/404.html
@@ -30,11 +30,12 @@
     <div class="vogana01">
 </div>
     <div class="vogana02">
-            <h1>404</h1>
-            <p>Oops! It looks like you're lost...</p>
-            <p>The Page you're looking for doesn't exist or another error occurred.</p>
+            <h1>404</h1><br>
+            <h1>抱歉，页面不存在</h1><br>
+    <p>您请求的页面不存在或已被移动。</p><br>
+    <p><a href="index.html">返回首页</a></p><br>
             <p><a href="index.html">👉  https://annazi.netlify.app</a></p>
-        </div>
+  </div>
 	  
 <!-- 内容样式 */ -->		  
   </div>	
