--- a/ind03.html
+++ b/ind03.html
@@ -59,7 +59,7 @@
   </div>	
 <!-- 内容样式 */ -->
 <button id="backToTopBtn">∧</button>
-	<script src="script.js"></script>		
+	<script src="js/script.js"></script>		
 <!-- 底部样式 -->		  
     <div class="footer">
         &copy; 2023 QQ:184405145 版权所有。
