--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>页面不存在 | 服装制版</title>
     <link rel="stylesheet" href="css/styles.css">
-	<meta http-equiv="refresh" content="5;url=/404.html">
+	<!--<meta http-equiv="refresh" content="5;url=/404.html">-->
 </head>
 <body>
 		<!-- 首页链接 -->
