--- a/ind03.html
+++ b/ind03.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>服装制版</title>
     <link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styless.css">
+	<link rel="stylesheet" href="css/stylesb.css">
+	<!-- ... 其他 meta 标签和样式链接 ... -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+	<meta name="description" content="服装制版">
+<meta name="keywords" content="女装制版, 男装制版, 制版, https://annazi.netlify.app/">
 </head>
 <body>
 	
     <div class="header">
+	
         <div class="navbar">
             <div class="logo">
                 <img src="images/favicon.png" alt="Logo">
@@ -55,12 +62,24 @@
 		<br>
 		<br>
     </div>
-	  
+	<button id="toggleBtn">◀</button>  
 <!-- 内容样式 */ -->		  
   </div>	
 <!-- 内容样式 */ -->
-<button id="backToTopBtn">∧</button>
-	<script src="js/script.js"></script>		
+<div id="panel">
+	<div class="nav-container">
+            <button id="changeColorBtn">点击护眼模式</button>
+  </div>
+	<!-- <h4>联系我们</h4>-->
+    <h4><a href="https://coooc.link/" target="_blank">友情链接</a></h4>
+    <a href="ind02.html" target="_parent"><img src="images/weixin.jpg" height="60" width: "60"  alt="图片"></a>
+    <p>QQ:184404154</p>
+	<p>cctv92@126.com</p>
+</div>
+	<button id="backToTopBtn">∧</button>
+	<script src="js/script.js"></script>
+    <script src="js/scriptt.js"></script>
+    <script src="js/scriptb.js"></script>		
 <!-- 底部样式 -->		  
     <div class="footer">
         &copy; 2023 QQ:184405145 版权所有。
