--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-    <title>服装制版</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>服装制版 - CAD制版</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <meta name="description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi.netlify.app/ ">
+    <meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi.netlify.app/">
+    <meta name="author" content="服装制版">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi.netlify.app/
+">
+    <meta property="og:description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi.netlify.app/
+">
+    <meta property="og:image" content="https://annazi.netlify.app/images/favicon.png">
+    <meta property="og:url" content="https://annazi.netlify.app/">
+    <meta property="og:type" content="article">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi.netlify.app/
+">
+    <meta name="twitter:description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi.netlify.app/
+">
+    <meta name="twitter:image" content="https://annazi.netlify.app/images/favicon.png">
+    <meta name="googlebot" content="noindex">
+    <meta name="googlebot-news" content="nosnippet">
+    <meta name="geo.placename" content="浙江、宁波">
+
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/styless.css">
 	<link rel="stylesheet" href="css/stylesb.css">
 
-	<!-- ... 其他 meta 标签和样式链接 ... -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
-	<meta name="description" content="服装制版">
-<meta name="keywords" content="女装制版, 男装制版, 制版, https://annazi.netlify.app/">
-	
 </head>
 <body>
     
