--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-	<meta charset="UTF-8">
+	<meta name="baidu-site-verification" content="codeva-KLHMw5vGRp" />
+<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>服装制版 - CAD制版</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <meta name="description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi ">
-    <meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi ">
+    <meta name="description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
+    <meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link ">
     <meta name="author" content="服装制版">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi ">
-    <meta property="og:description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi ">
-    <meta property="og:image" content="https://annazi.netlify.app/images/favicon.png">
-    <meta property="og:url" content="https://annazi.netlify.app/">
+    <meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link">
+    <meta property="og:description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！">
+    <meta property="og:image" content="https://www.foooz.link/images/favicon.png">
+    <meta property="og:url" content="https://www.foooz.link/">
     <meta property="og:type" content="article">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi ">
-    <meta name="twitter:description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi ">
-    <meta name="twitter:image" content="https://annazi.netlify.app/images/favicon.png">
+    <meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link">
+    <meta name="twitter:description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
+    <meta name="twitter:image" content="https://www.foooz.link/images/favicon.png">
     <meta name="googlebot" content="noindex">
     <meta name="googlebot-news" content="nosnippet">
     <meta name="geo.placename" content="浙江、宁波">
-
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/styless.css">
 	<link rel="stylesheet" href="css/stylesb.css">
@@ -40,7 +40,7 @@
             <ul class="nav-links">
 				
                 <li><a href="index.html">首页</a></li>
-                <li><a href="https://annazi.link:10334">论坛</a></li>
+                <li><a href="https://annazi.link:10334">论坛网</a></li>
                 <li><a href="ind03.html">服务</a></li>
                 <li><a href="ind02.html">联系我们</a></li>
             </ul>
@@ -55,40 +55,32 @@
     <div class="vogana01">
 </div>
     <div class="vogana02">
-        <h1>服装制版</h1>
-		<br>
-        服装制版是指在服装设计开发过程中，将设计图纸转化为真实服装尺寸的过程。制版包括对版型、面料、配饰等进行细致的测量和调整，并绘制出服装的图纸。
+        <h1>招聘服装论坛版主</h1>
+		
 <br>
-制版流程通常包括以下几个步骤：<br>
-
-<ol>根据设计图纸和面料要求，测量并调整版型尺寸。</ol>
-<ol>绘制出服装的图纸，包括前身、后身、侧身、领口、袖口等部位。</ol>
-<ol>根据图纸，制作出服装样衣。</ol>
-<ol>根据样衣进行修改和调整，直至符合要求。</ol>
-<ol>服装制版需要经过细致的测量和调整，需要有丰富的经验和技巧，一般由专业的制版师进行。</ol>
-		<br>
-		<h1>样衣制作</h1>
-		<br>
-		样衣制作是服装设计和生产过程中的重要环节，它是将设计师的概念转化为实际服装原型的步骤。样衣是设计师和团队审查、修改和完善服装设计的基础。
-		以下是样衣制作的一般步骤：
-		<br>
-		<ol>1. 制版： 首先，制版师根据设计师提供的草图、图纸或数字设计，创建服装的基本图样。这些图样描述了服装的各个部分，包括前后身、袖子、领口等。</ol>
-
-<ol>2. 选择面料： 根据设计要求和服装用途，纺织工程师或面料专家选择适合的面料。面料的质地、颜色、透气性等特性都会影响最终样衣的效果。</ol>
-
-<ol>3. 剪裁面料： 根据制版师提供的图样，将选定的面料剪裁成所需的形状和尺寸。</ol>
-
-<ol>4. 缝制和组装： 样衣制作师使用缝纫机和其他制衣工具，将剪裁好的面料缝制成服装的零件，然后组装起来。这个过程可能包括缝接、拼接、装饰等步骤。
-</ol>
-<ol>5. 试穿和调整： 制作好的样衣由模特进行试穿。设计师和制版师会仔细观察样衣的剪裁、贴合度、舒适性等方面，然后对需要进行调整的地方提出建议。
-</ol>
-<ol>6. 修改和完善： 基于试穿的结果，样衣可能需要进行一些修改和调整。制版师会根据设计师和团队的反馈，进行图样的修正，以确保样衣更加符合设计要求。</ol>
-
-<ol>7. 再次试穿和确认： 经过修改后的样衣再次由模特试穿，确保修正的效果符合预期。</ol>
-
-<ol>8. 制作最终样品： 一旦样衣达到满意的水平，最终的样品可以用于展示给客户、拍摄宣传照片，或者作为生产的参考样本。</ol>
-		<br>
-		样衣制作的过程需要密切合作的团队协同努力，以确保服装的设计和质量得到最佳体现。这个阶段也为设计师和生产团队提供了机会，进一步优化服装的细节和整体效果。
+<ul>职责与要求：
+管理论坛内容，监督帖子和评论，确保内容质量和秩序。
+积极参与讨论，提供有益的时尚、服装相关建议。
+协助解答其他会员的问题，分享你的专业知识和见解。
+与团队密切合作，共同维护良好的社区氛围。
+具备良好的沟通和协调能力，能够妥善处理纠纷和争议。
+具备一定的服装、时尚领域知识，有相关经验者优先考虑。</ul>
+<br>
+<ul>福利：
+获得丰富的时尚与服装领域知识，拓展你的个人兴趣爱好。
+增强沟通与管理能力，提升团队协作技巧。
+在论坛中建立影响力，结识志同道合的朋友。
+有机会参与时尚活动、赛事，拓展人际关系。
+长期优秀表现者有晋升机会。
+如果你热爱时尚，善于与人沟通，愿意为论坛的繁荣发展贡献一份力量，欢迎发送你的简历至[邮箱地址]，并在邮件标题中注明“服装论坛版主申请”。</ul>
+<br>
+<ul>让我们一起，用热情与知识点亮时尚的舞台！期待你的加入！
+</ul><br>
+<ul>联系方式
+	<br>
+邮箱：cctv92@126.com<br>
+网址：<a href="https://annazi.link:10334/">https://annazi.link</a>
+</ul>
 		<br>
 		<br>
 		<br>
@@ -101,15 +93,17 @@
 <!-- 内容样式 */ -->
 	  
         
-	<div id="panel">
+	<div id="panel" style="display: none;">
+		
+    <!--<h4>联系我们</h4>-->
+    <div><a href="https://www.annazi.cn:10072/" target="_blank">服装制版工作室</a>
+	<a href="https://annazi.link:10334/" target="_blank">服装技术论坛</a>
+    <a href="ind02.html" target="_parent"><img src="images/weixin.jpg" height="60" width: "60"  alt="图片"></a>
+    <p>QQ:184404154<br>cctv92@126.com</p>
+		</div>
 		<div class="nav-container">
             <button id="changeColorBtn">点击护眼模式</button>
 		</div>
-    <!--<h4>联系我们</h4>-->
-    <h4><a href="https://coooc.link/" target="_blank">友情链接</a></h4>
-    <a href="ind02.html" target="_parent"><img src="images/weixin.jpg" height="60" width: "60"  alt="图片"></a>
-    <p>QQ:184404154</p>
-	<p>cctv92@126.com</p>
     </div>
 	<button id="backToTopBtn">∧</button>
 	<script src="js/script.js"></script>
@@ -117,7 +111,6 @@
     <script src="js/scriptb.js"></script>
 <!-- 底部样式 -->		  
     <div class="footer">
-        &copy; 2023 QQ:184405145 版权所有。
-    </div>
+    &copy; 2023 QQ:184405145 版权所有 </div>
 </body>
 </html>
