--- a/ind02.html
+++ b/ind02.html
@@ -11,7 +11,7 @@
 	<!-- ... 其他 meta 标签和样式链接 ... -->
     <link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="description" content="服装制版">
-<meta name="keywords" content="女装制版, 男装制版, 制版, https://annazi.netlify.app/">
+<meta name="keywords" content="女装制版, 男装制版, 制版, www.foooz.link">
 </head>
 <body>
     <div class="header">
@@ -22,7 +22,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">首页</a></li>
-               <li><a href="https://annazi.link:10334">论坛</a></li>
+                <li><a href="https://annazi.link:10334">论坛</a></li>
                 <li><a href="ind03.html">服务</a></li>
                 <li><a href="ind02.html">联系我们</a></li>
             </ul>
@@ -55,15 +55,17 @@
 <!-- 内容样式 */ -->		  
   </div>	
 <!-- 内容样式 */ -->
-<div id="panel">
-	<div class="nav-container">
-            <button id="changeColorBtn">点击护眼模式</button>
-  </div>
-    <!-- <h4>联系我们</h4>-->
-    <h4><a href="https://coooc.link/" target="_blank">友情链接</a></h4>
+<div id="panel" style="display: none;">
+		
+    <!--<h4>联系我们</h4>-->
+    <div><a href="https://www.annazi.cn:10072/" target="_blank">服装制版工作室</a>
+	<a href="https://annazi.link:10334/" target="_blank">服装技术论坛</a>
     <a href="ind02.html" target="_parent"><img src="images/weixin.jpg" height="60" width: "60"  alt="图片"></a>
-    <p>QQ:184404154</p>
-	<p>cctv92@126.com</p>
+    <p>QQ:184404154<br>cctv92@126.com</p>
+		</div>
+		<div class="nav-container">
+            <button id="changeColorBtn">点击护眼模式</button>
+		</div>
     </div>
 	<button id="backToTopBtn">∧</button>
 	<script src="js/script.js"></script>
