--- a/ind03.html
+++ b/ind03.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-	<meta charset="UTF-8">
+<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>服装制版 - CAD制版</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <meta name="description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi ">
-    <meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi ">
+    <meta name="description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
+    <meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link ">
     <meta name="author" content="服装制版">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi ">
-    <meta property="og:description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi ">
-    <meta property="og:image" content="https://annazi.netlify.app/images/favicon.png">
-    <meta property="og:url" content="https://annazi.netlify.app/">
+    <meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link">
+    <meta property="og:description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！">
+    <meta property="og:image" content="https://www.foooz.link/images/favicon.png">
+    <meta property="og:url" content="https://www.foooz.link/">
     <meta property="og:type" content="article">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,annazi ">
-    <meta name="twitter:description" content="如何进行裤子制版,西装制版的步骤和流程,服装打样的重要性和方法,风衣制版的技巧和注意事项,如何使用CAD进行服装制版,优秀服装版师如何提高效率,如何选择合适的服装工艺,样衣打样对服装设计的影响,服装3D技术在制版中的应用,大衣制版的尺寸和剪裁要点,服装交互设计师的职责和技能要求,如何成为一名成功的服装设计师,服装导航网站推荐和使用指南,最新的服装制版趋势和技术,服装产品创新和设计案例分享,annazi ">
-    <meta name="twitter:image" content="https://annazi.netlify.app/images/favicon.png">
+    <meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link">
+    <meta name="twitter:description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
+    <meta name="twitter:image" content="https://www.foooz.link/images/favicon.png">
     <meta name="googlebot" content="noindex">
     <meta name="googlebot-news" content="nosnippet">
     <meta name="geo.placename" content="浙江、宁波">
-
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/styless.css">
 	<link rel="stylesheet" href="css/stylesb.css">
@@ -81,16 +80,18 @@
 <!-- 内容样式 */ -->		  
   </div>	
 <!-- 内容样式 */ -->
-<div id="panel">
-	<div class="nav-container">
-            <button id="changeColorBtn">点击护眼模式</button>
-  </div>
-	<!-- <h4>联系我们</h4>-->
-    <h4><a href="https://coooc.link/" target="_blank">友情链接</a></h4>
+<div id="panel" style="display: none;">
+		
+    <!--<h4>联系我们</h4>-->
+    <div><a href="https://www.annazi.cn:10072/" target="_blank">服装制版工作室</a>
+	<a href="https://annazi.link:10334/" target="_blank">服装技术论坛</a>
     <a href="ind02.html" target="_parent"><img src="images/weixin.jpg" height="60" width: "60"  alt="图片"></a>
-    <p>QQ:184404154</p>
-	<p>cctv92@126.com</p>
-</div>
+    <p>QQ:184404154<br>cctv92@126.com</p>
+		</div>
+		<div class="nav-container">
+            <button id="changeColorBtn">点击护眼模式</button>
+		</div>
+    </div>
 	<button id="backToTopBtn">∧</button>
 	<script src="js/script.js"></script>
     <script src="js/scriptt.js"></script>
