--- a/TMPh6n2j0.htm
+++ b/TMPh6n2j0.htm
@@ -118,7 +118,10 @@
     <script src="js/scriptt.js"></script>
     <script src="js/scriptb.js"></script>
 <!-- 底部样式 -->		  
-    <div class="footer">
-    &copy; 2023 QQ:184405145 版权所有 </div>
+  
+	<div class="footer">
+    <div class="desktop-content">2023 QQ:184405145 版权所有</div>
+    <div class="mobile-content">annazi</div>
+</div>
 </body>
 </html>
