--- a/TMPjm18of.htm
+++ b/TMPjm18of.htm
@@ -40,7 +40,7 @@
             <ul class="nav-links">
 				
                 <li><a href="index.html">首页</a></li>
-                <li><a href="https://annazi.link:10334">论坛网</a></li>
+                <li><a href="https://annazi.link:10334" target="_blank">论坛网</a></li>
                 <li><a href="ind03.html">服务</a></li>
                 <li><a href="ind02.html">联系我们</a></li>
             </ul>
@@ -120,8 +120,16 @@
 <!-- 底部样式 -->		  
   
 	<div class="footer">
-    <div class="desktop-content">2023 QQ:184405145 版权所有</div>
-    <div class="mobile-content">annazi</div>
+    <div class="desktop-content">2023 ANNAZI版权所有 cctv92@126.com </div>
+    <div class="mobile-content"><footer class="footer">
+    <nav class="footer-menu">
+        <ul class="menu-list">
+            <li><a href="#">论坛网</a></li>
+            <li><a href="#">制版网</a></li>
+            <li><a href="#">自媒体</a></li>
+        </ul>
+    </nav>
+</footer></div>
 </div>
 </body>
 </html>
