--- a/TMPxa6tpw.htm
+++ b/TMPxa6tpw.htm
@@ -124,9 +124,11 @@
     <div class="mobile-content"><footer class="footer">
     <nav class="footer-menu">
         <ul class="menu-list">
-            <li><a href="#">论坛网</a></li>
-            <li><a href="#">制版网</a></li>
-            <li><a href="#">自媒体</a></li>
+            <li><a href="https://annazi.link:10334" target="_blank"><span class="material-icons">
+论坛网
+</span></a></li>
+            <li><a href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
+            <li><a href="https://coooc.link/" target="_blank">导航网</a></li>
         </ul>
     </nav>
 </footer></div>
