--- a/index.html
+++ b/index.html
@@ -61,14 +61,12 @@
         <h1>招聘服装论坛版主</h1>
 		
 <br>
-<ul>职责与要求：
-管理论坛内容，监督帖子和评论，确保内容质量和秩序。
+职责与要求： 管理论坛内容，监督帖子和评论，确保内容质量和秩序。
 积极参与讨论，提供有益的时尚、服装相关建议。
 协助解答其他会员的问题，分享你的专业知识和见解。
 与团队密切合作，共同维护良好的社区氛围。
 具备良好的沟通和协调能力，能够妥善处理纠纷和争议。
-具备一定的服装、时尚领域知识，有相关经验者优先考虑。</ul>
-<br>
+具备一定的服装、时尚领域知识，有相关经验者优先考虑。 <br>
 <ul>福利：
 获得丰富的时尚与服装领域知识，拓展你的个人兴趣爱好。
 增强沟通与管理能力，提升团队协作技巧。
