--- a/TMP121nonl.htm
+++ b/TMP121nonl.htm
@@ -35,6 +35,7 @@
     <div class="navbar">
         <div class="logo">
             <img src="images/favicon.png" alt="Logo">
+			<span class="logo-text">Your Text Here</span>
         </div>
         <div class="menu-icon" onclick="toggleNav()">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
