--- a/ind02.html
+++ b/ind02.html
@@ -121,7 +121,7 @@
         <ul class="menu-list">
             <li><a href="https://annazi.link:10334" target="_blank">论坛网</a></li>
             <li><a href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
-            <li><a href="https://coooc.link/" target="_blank">导航网</a></li>
+            <li><a href="ind02.html" target="_blank">联系我</a></li>
         </ul>
     </nav>
 </footer></div>
