--- a/TMPqnpxwe.htm
+++ b/TMPqnpxwe.htm
@@ -35,7 +35,7 @@
     <div class="navbar">
         <div class="logo">
             <img src="images/favicon.png" alt="Logo">
-			<span class="logo-text">Your Text Here</span>
+			<span class="logo-text">服装技术论坛</span>
         </div>
         <div class="menu-icon" onclick="toggleNav()">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
@@ -129,7 +129,7 @@
         <ul class="menu-list">
             <li><a href="https://annazi.link:10334" target="_blank">论坛网</a></li>
             <li><a href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
-            <li><a href="https://coooc.link/" target="_blank">导航网</a></li>
+            <li><a href="ind02.html" target="_blank">联系我</a></li>
         </ul>
     </nav>
 </footer></div>
