--- a/ind03.html
+++ b/ind03.html
@@ -44,10 +44,10 @@
             </svg>
         </div>
         <ul class="nav-links" id="navLinks">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="https://annazi.link:10334" target="_blank">论坛网</a></li>
-            <li><a href="ind03.html">服务</a></li>
-            <li><a href="ind02.html">联系我们</a></li>
+            <li><a class="dropdown-item" href="index.html">首页</a></li>
+            <li><a class="dropdown-item" href="https://annazi.link:10334" target="_blank">论坛网</a></li>
+            <li><a class="dropdown-item" href="ind03.html">服务</a></li>
+            <li><a class="dropdown-item" href="ind02.html">联系我们</a></li>
         </ul>
     </div>
 </div>
@@ -136,9 +136,9 @@
     <div class="mobile-content"><footer class="footer">
     <nav class="footer-menu">
         <ul class="menu-list">
-            <li><a href="https://annazi.link:10334" target="_blank">论坛网</a></li>
-            <li><a href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
-            <li><a href="ind02.html" target="_blank">联系我</a></li>
+            <li><a class="dropdown-item" href="https://annazi.link:10334" target="_blank">论坛网</a></li>
+            <li><a class="dropdown-item" href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
+            <li><a class="dropdown-item" href="ind02.html" target="_blank">联系我</a></li>
         </ul>
     </nav>
 </footer></div>
