--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
     <div class="mobile-content"><footer class="footer">
     <nav class="footer-menu">
         <ul class="menu-list">
-            <li><a class="dropdown-item" href="https://annazi.link:10334" target="_blank">论坛网</a></li>
-            <li><a class="dropdown-item" href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
-            <li><a class="dropdown-item" href="ind02.html" target="_blank">联系我</a></li>
+            <li><a href="https://annazi.link:10334" target="_blank">论坛网</a></li>
+            <li><a href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
+            <li><a href="ind02.html" target="_blank">联系我</a></li>
         </ul>
     </nav>
 </footer></div>
