--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <div class="vogana01">
 </div>
     <div class="vogana02">
+		<div>
         <h1>招聘服装论坛版主</h1>
 		
 <br>
@@ -82,7 +83,7 @@
 	<br>
 邮箱：cctv92@126.com<br>
 网址：<a href="https://annazi.link:10334/">https://annazi.link</a>
-</ul>
+</ul></div>
 		<br>
 		<div class="gallery">
     <div class="image"><img src="images/wiu/1001.jpg" alt="Image 1"></div>
