--- a/ind02.html
+++ b/ind02.html
@@ -39,7 +39,7 @@
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a class="dropdown-item" href="index.html">首页</a></li>
-      <li><a class="dropdown-item" href="https://annazi.link:10334" target="_blank">论坛网</a></li>
+      <li><a class="dropdown-item" href="https://annazi.link:10334/template/anna/index.html" target="_blank">自媒体视频</a></li>
       <li><a class="dropdown-item" href="ind03.html">服务</a></li>
       <li><a class="dropdown-item" href="ind02.html">联系我们</a></li>
     </ul>
