--- a/ind03.html
+++ b/ind03.html
@@ -110,7 +110,7 @@
     <footer class="footer">
       <nav class="footer-menu">
         <ul class="menu-list">
-          <li><a class="dropdown-item" href="https://annazi.link:10334" target="_blank">论坛网</a></li>
+          <li><a class="dropdown-item" href="https://annazi.link:10334/template/anna/index.html" target="_blank">自媒体</a></li>
           <li><a class="dropdown-item" href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
           <li><a class="dropdown-item" href="ind02.html" target="_blank">联系我</a></li>
         </ul>
