--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a class="dropdown-item" href="index.html">首页</a></li>
-      <li><a class="dropdown-item" href="https://annazi.link:10334/template/anna/index.html" target="_blank">自媒体视频</a></li>
+      <li><a class="dropdown-item" href="https://sp.annazi.link:10445/spwang/index.html" target="_blank">自媒体视频</a></li>
       <li><a class="dropdown-item" href="ind03.html">服务</a></li>
       <li><a class="dropdown-item" href="ind02.html">联系我们</a></li>
     </ul>
@@ -115,7 +115,7 @@
     <footer class="footer">
       <nav class="footer-menu">
         <ul class="menu-list">
-          <li><a class="dropdown-item" href="https://annazi.link:10334/template/anna/index.html" target="_blank">自媒体</a></li>
+          <li><a class="dropdown-item" href="https://sp.annazi.link:10445/spwang/index.html" target="_blank">自媒体</a></li>
           <li><a href="https://www.annazi.cn:10072/" target="_blank">制版网</a></li>
           <li><a href="ind02.html" target="_blank">联系我</a></li>
         </ul>
