--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </div>
 </div>
 <!-- JavaScript 调用 -->
-<button id="toggleBtn">◀</button>
+<button id="toggleBtn"><img src="images/c02.svg" alt="<"></button>
 <button id="backToTopBtn">∧</button>
 <script src="js/script.js"></script> 
 <script src="js/scriptt.js"></script> 
