--- a/fuwu.html
+++ b/fuwu.html
@@ -23,9 +23,9 @@
 <meta name="googlebot" content="noindex">
 <meta name="googlebot-news" content="nosnippet">
 <meta name="geo.placename" content="浙江、宁波">
-<link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="css/styless.css">
-<link rel="stylesheet" href="css/stylesb.css">
+<link rel="stylesheet" href="css/styles.css?v=1">
+<link rel="stylesheet" href="css/styless.css?v=1">
+<link rel="stylesheet" href="css/stylesb.css?v=1">
 </head>
 <body>
 <!-- 导航部分 -->
@@ -107,10 +107,10 @@
 <!-- 隐藏面板 */ -->
 <!-- JavaScript 调用 -->
 <button id="backToTopBtn">∧</button>
-<script src="js/script.js"></script> 
-<script src="js/scriptt.js"></script> 
-<script src="js/scriptb.js"></script> 
-<script src="js/scriptu.js"></script> 
+<script src="js/script.js?v=1"></script> 
+<script src="js/scriptt.js?v=1"></script> 
+<script src="js/scriptb.js?v=1"></script> 
+<script src="js/scriptu.js?v=1"></script> 
 <!-- 底部样式 -->
 <div class="footer">
   <div class="desktop-content">2023 ANNAZI版权所有 cctv92@126.com </div>
