--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 <script src="js/scriptt.js?v=1"></script> 
 <script src="js/scriptb.js?v=1"></script> 
 <script src="js/scriptu.js?v=1"></script> 
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 <!-- 底部样式 -->
 <!-- 占位符元素用于显示页脚 -->
     <footer></footer>
