--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <div class="vogana01"> </div>
   <div class="vogana02">
     <div>
-		<button class="loadStaticPage" data-page="lianxi.html">加载静态B页面</button>
-<button class="loadStaticPage" data-page="fuwu.html">加载静态C页面</button>
+		<button class="loadStaticPage" data-page="pageB.html">加载静态B页面</button>
+<button class="loadStaticPage" data-page="pageC.html">加载静态C页面</button>
 <button class="loadStaticPage" data-page="pageD.html">加载静态D页面</button>
 <div id="staticPageContent"></div>
 
