--- a/lianxi.html
+++ b/lianxi.html
@@ -70,7 +70,7 @@
   <div class="vogana02">
     <h1>联系我们</h1>
     <p> <br>
-      QQ:184404154</p>
+      QQ:184404154&nbsp;</p>
     <p>邮箱：cctv92@126.com <br>
       地址：上海 * 宁波 * 杭州</p>
     <br>
