--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div>
 		
 
-      <h1>招聘服装论坛版主</h1>
+      <h1>2024年招聘服装论坛版主</h1>
       <br>
       职责与要求： 管理论坛内容，监督帖子和评论，确保内容质量和秩序。
       积极参与讨论，提供有益的时尚、服装相关建议。
