--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <ul>
         联系方式 <br>
         邮箱：cctv92@126.com<br>
-        网址：<a href="https://annazi.link:10334/">https://annazi.link</a>
+        网址：<a href="https://annazi.cn">服装3D探索者 </a>
       </ul>
     </div>
     <br>
@@ -115,7 +115,7 @@
 <!-- 隐藏面板 */ -->
 <div id="panel" style="display: none;">
   <div>
-    <div class="apple-text"><a href="https://www.annazi.cn:10072/" target="_blank"><img src="images/c01.svg" alt="图片">制版工作室</a></div>
+    <div class="apple-text"><a href="https://www.annazi.cn/" target="_blank"><img src="images/c01.svg" alt="图片">制版工作室</a></div>
     <div  class="apple-text"><a href="https://annazi.link:10334/" target="_blank"><img src="images/c01.svg" alt="图片">服装论坛</a></div>
     <div><img src="images/weixin.jpg" height="80" width: "80"  alt="图片"></div>
     <div class="apple-text">QQ群:178919834<br>
