--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div id="panel" style="display: none;">
   <div>
     <div class="apple-text"><a href="https://www.annazi.cn/" target="_blank"><img src="images/c01.svg" alt="图片">制版工作室</a></div>
-    <div  class="apple-text"><a href="https://annazi.link:10334/" target="_blank"><img src="images/c01.svg" alt="图片">服装论坛</a></div>
+    <div  class="apple-text"><a href="https://lt.annazi.cn/" target="_blank"><img src="images/c01.svg" alt="图片">服装论坛</a></div>
     <div><img src="images/weixin.jpg" height="80" width: "80"  alt="图片"></div>
     <div class="apple-text">QQ群:178919834<br>
       cctv92@126.com</div>
