--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
           <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
         </svg>
         首页</a></li>
-      <li><a class="dropdown-item" href="https://sp.annazi.link:10445/spwang/index.html" target="_blank">
+      <li><a class="dropdown-item" href="spwy.html" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: #eb6d6e;" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
           <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
           <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -79,7 +79,7 @@
             <h1>抱歉，页面不存在</h1><br>
     <p>您请求的页面不存在或已被移动。</p><br>
     <p><a href="index.html">返回首页</a></p><br>
-            <p><a href="index.html">👉  https://annazi.netlify.app</a></p>
+            <p><a href="index.html">👉 https://pca.us.kg</a></p>
   </div>
 	  
 <!-- 内容样式 */ -->		  
@@ -97,7 +97,7 @@
     <footer class="footer">
       <nav class="footer-menu">
         <ul class="menu-list">
-          <li><a href="https://sp.annazi.link:10445/spwang/index.html" target="_blank">
+          <li><a href="spwy.html" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: #eb6d6e;" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
               <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
               <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
