--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <footer class="footer">
       <nav class="footer-menu">
         <ul class="menu-list">
-          <li><a href="https://sp.annazi.link:10445/spwy" target="_blank">
+          <li><a href="spwy.html" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: #eb6d6e;" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
               <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
               <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
